# gh2

./: LICENSE  README.md  setup.cfg  setup.py
docs/: introduction.md  processing&p5js-to-lighght.md
docs/api/: color.md  constants.md  environment.md  events.md  helpers.md  image.md  io.md  math.md  readme.md  shape.md  structure.md  time.md  transform.md  typography.md
docs/examples/: bar.md  bfs.md  bubble.md  dfs.md  globe.md  heart.md  insertion.md  merge.md  pie.md  prim.md  snake.md
docs/tutorials/: color.md  event.md  helper.md  image.md  structure.md  typography.md
examples/: bar.py  bfs.py  bubble.py  dfs.py  globe.py  heart.py  insertion.py  merge.py  pie.py  prim.py  scales.py  snake.py
src/gh2/: __init__.py  utils.py
src/lighght/: __init__.py  utils.py
tests/color/: test_background.py  test_ccolor.py  test_color_mode_ansi_256.py  test_color_mode_ansi_baisc.py  test_color_mode_hsb.py  test_color_mode_rgb_gray.py  test_color_mode_rgb_red.py  test_fill.py  test_lerp_color_ansi.py  test_lerp_color_rgb.py  test_no_fill.py  test_no_stroke.py  test_stroke.py
tests/constants/: test_half_pi.py  test_pi.py  test_quarter_pi.py  test_tau.py  test_two_pi.py
tests/environment/: test_cursor.py  test_dimensions.py  test_frame_rate.py  test_full_screen_double.py  test_full_screen_single.py  test_no_cursor.py  test_size_double.py  test_size_single.py
tests/events/: test_event_cursor.py  test_get_key.py  test_get_key_code.py  test_get_key_released.py  test_get_key_typed.py  test_get_mouse_button.py  test_get_mouse_pos.py  test_mouse_clicked.py  (+2 more)
(+70 files in other folders)
