[metadata]
name = lighght
url = https://github.com/pearmini/lighght
projects_url = 
    Documentation = https://github.com/pearmini/lighght
    Code = https://github.com/pearmini/lighght
    Issue tracker = https://github.com/pearmini/lighght/issues
license = LGPL v2.1
author = Bairui SU
author_email = subairui@icloud.com
maintainer = Bairui SU
maintainer_email = subairui@icloud.com
description = The creative coding language for ASCII art and poetic form.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Console :: Curses
    Environment :: MacOS X
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.6
    Topic :: Artistic Software
    Topic :: Education
    Topic :: Multimedia :: Graphics
    Topic :: Terminals

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6

[options.packages.find]
where = src